# soft-sword-cup

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  http-server.cpp  ~$搜索算法说明.docx  ~$赛题说明.docx  变量说明.txt  城市简称.txt  搜索算法说明.docx  数据信息.xlsx  索引说明.docx  航司简称.txt  赛题说明.docx
frontend/: README.md  dist.rar  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: axios.js  data.js  mock.js
frontend/src/api/mockServerData/: permission.js
frontend/src/components/: CommonAside.vue  CommonCity.vue  CommonHeader.vue  CommonQuery.vue  city.vue  citylist.vue  query.vue  result.vue
frontend/src/config/: index.js
frontend/src/mixins/: pageMixins.js
frontend/src/router/: index.js
frontend/src/store/: date.js  index.js  result.js  tab.js  user.js
frontend/src/utils/: flexible.js  utils.js
frontend/src/views/: Main.vue  ticketPage.vue
frontend/src/views/Login/: login.vue
frontend/src/views/home/: index.vue
frontend/src/views/result/: index.vue
redis/: api.cpp
redisdata/: plane.txt  price.txt  pricetable.txt
search algorithm/air/: 1.cpp  2.cpp  treebuild.cpp
search algorithm/http-cpp/__MACOSX/http-cpp/: ._CMakeLists.txt
search algorithm/http-cpp/__MACOSX/http-cpp/include/: ._linux
search algorithm/http-cpp/__MACOSX/http-cpp/include/linux/: ._openssl
search algorithm/http-cpp/__MACOSX/http-cpp/lib/: ._libworkflow.dylib
search algorithm/http-cpp/http-cpp/: CMakeLists.txt  http-server.cpp  http-server2.cpp  test
search algorithm/http-cpp/http-cpp/include/macos/workflow/: CommScheduler.h
search algorithm/http-cpp/http-cpp/lib/: libworkflow.dylib
search algorithm/http-cpp/http-cpp/test.dSYM/Contents/Resources/DWARF/: test
search algorithm/test/: 1.cpp  2.cpp  3.cpp  air.txt  connection_pool.h  customer.h  dp_connection.cpp  form_answer.cpp  form_answer.h  main.cpp  match.cpp  match.h  net.cpp  preprocessing.cpp  preprocessing.h  price.txt  pricetable.txt  readtxt.cpp  readtxt.h  search.cpp  search.h  seat.txt
test/: connection_pool.cpp  dp_connection.cpp  test  test.cpp
